--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "start": "nuxt start"
   },
   "devDependencies": {
-    "@nuxtjs/tailwindcss": "^5.1.2"
+    "@nuxtjs/tailwindcss": "^5.1.2",
+    "sass": "^1.52.3",
+    "sass-loader": "10.2.1"
   }
 }
