MAS-14 Działająca autentykacja - do poprawienia parse jeśli jest ciasteczko

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "mastering-nuxt",
   "dependencies": {
     "cookie": "^0.5.0",
+    "google-auth-library": "^8.0.3",
     "js-cookie": "^3.0.1",
     "nuxt": "^2.15.8"
   },
