MAS-15 body-parser added

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "mastering-nuxt",
   "dependencies": {
+    "body-parser": "^1.20.0",
     "cookie": "^0.5.0",
     "google-auth-library": "^8.0.3",
     "js-cookie": "^3.0.1",
