--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "start": "nuxt start"
   },
   "devDependencies": {
+    "@nuxt/image": "^0.7.1",
     "@nuxtjs/tailwindcss": "^5.1.2",
     "sass": "^1.52.3",
     "sass-loader": "10.2.1"
