--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
   "name": "mastering-nuxt",
   "dependencies": {
+    "@nuxtjs/cloudinary": "^1.0.3",
     "body-parser": "^1.20.0",
+    "cloudinary-vue": "^1.2.4",
     "cookie": "^0.5.0",
     "google-auth-library": "^8.0.3",
     "js-cookie": "^3.0.1",
-    "nuxt": "^2.15.8"
+    "nuxt": "^2.15.8",
+    "uuid": "^8.3.2"
   },
   "scripts": {
     "dev": "nuxt",
@@ -13,6 +16,7 @@
     "start": "nuxt start"
   },
   "devDependencies": {
+    "@nuxt/image": "^0.7.1",
     "@nuxtjs/tailwindcss": "^5.1.2",
     "sass": "^1.52.3",
     "sass-loader": "10.2.1"
