--- a/.env_keys
+++ b/.env_keys
@@ -7,3 +7,5 @@ GOOGLE_OAUTH_SECRET=
 CLOUDINARY_CLOUD_NAME=
 CLOUDINARY_API_KEY=
 CLOUDINARY_API_SECRET=
+STRIPE_PUBLISHABLE_KEY=
+STRIPE_SECRET_KEY=
