--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "google-auth-library": "^8.0.3",
     "js-cookie": "^3.0.1",
     "nuxt": "^2.15.8",
+    "stripe": "^9.11.0",
     "uuid": "^8.3.2",
     "v-calendar": "^2.4.1"
   },
